# Mostra-de-Profissoes-2025-Jogo-Distancia

./: .gitignore  README.md  app.py  main.py  maze_generator.py  pyproject.toml  requirements.txt
mazes/: dificil 1.txt  dificil 2.txt  dificil 3.txt  facil 1.txt  facil 2.txt  facil 3.txt  maze_15x15_1.txt  maze_15x15_10.txt  maze_15x15_2.txt  maze_15x15_3.txt  maze_15x15_4.txt  maze_15x15_5.txt  maze_15x15_6.txt  maze_15x15_7.txt  maze_15x15_8.txt  maze_15x15_9.txt  medio 1.txt  medio 2.txt  medio 3.txt  medio 4.txt  medio 5.txt
