[project]
name = "mostra-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "osmnx>=2.0.6",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.2",
]
